fixtures/frontend/milestone-2/invalid/truthy-falsy-noncanonical-subject/main.aivi
type User = {
    name: Text
}

val user:User = { name: "Ada" }

val message:Text =
    user
     T|> .name
     F|> "guest"
